TRUE First in 1

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       search: ['/']
     }
   </script>
+  <!-- First in 1 TRUE-->
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
   <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
 </body>
