--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
   </script>
   <!-- First in 1 TRUE
-    Second in 2-->
+    Third in 1-->
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
   <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
 </body>
