1 commit for mistake

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>
   <noscript>This page requires JavaScript to work, please enable it or just read it on <a href="https://github.com/ripienaar/free-for-dev">Here</a>.</noscript>
   <div id="app">Loading...</div>
+  <!--
+    yesterday i've played footbal
+  -->
   <script>
     window.$docsify = {
       name: 'Free for developers',
