--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <noscript>This page requires JavaScript to work, please enable it or just read it on <a href="https://github.com/ripienaar/free-for-dev">Here</a>.</noscript>
   <div id="app">Loading...</div>
   <!--
-    yesterday i've played footbal
+    yesterday i've played football
+    and day before ChGK
   -->
   <script>
     window.$docsify = {
